--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -83,9 +83,14 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Vertical",Scale=1.000000,Key=Gamepad_LeftY)
 +AxisMappings=(AxisName="Horisontal",Scale=-1.000000,Key=D)
 +AxisMappings=(AxisName="Horisontal",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="Vertical",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="Vertical",Scale=-1.000000,Key=Down)
++AxisMappings=(AxisName="Horisontal",Scale=1.000000,Key=Left)
++AxisMappings=(AxisName="Horisontal",Scale=-1.000000,Key=Right)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
++ConsoleKeys=ё
 
