--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -78,15 +78,15 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Vertical",Scale=1.000000,Key=W)
-+AxisMappings=(AxisName="Horisontal",Scale=1.000000,Key=A)
++AxisMappings=(AxisName="Horizontal",Scale=1.000000,Key=A)
 +AxisMappings=(AxisName="Vertical",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Vertical",Scale=1.000000,Key=Gamepad_LeftY)
-+AxisMappings=(AxisName="Horisontal",Scale=-1.000000,Key=D)
-+AxisMappings=(AxisName="Horisontal",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="Horizontal",Scale=-1.000000,Key=D)
++AxisMappings=(AxisName="Horizontal",Scale=1.000000,Key=Gamepad_LeftX)
 +AxisMappings=(AxisName="Vertical",Scale=1.000000,Key=Up)
 +AxisMappings=(AxisName="Vertical",Scale=-1.000000,Key=Down)
-+AxisMappings=(AxisName="Horisontal",Scale=1.000000,Key=Left)
-+AxisMappings=(AxisName="Horisontal",Scale=-1.000000,Key=Right)
++AxisMappings=(AxisName="Horizontal",Scale=1.000000,Key=Left)
++AxisMappings=(AxisName="Horizontal",Scale=-1.000000,Key=Right)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
